@startuml

title __STORES's Class Diagram__\n

  namespace com.example.dip.demodippizzamanager {
    namespace stores {
      class com.example.dip.demodippizzamanager.stores.ChicagoPizzaStore {
          # createPizza()
      }
    }
  }
  

  namespace com.example.dip.demodippizzamanager {
    namespace stores {
      class com.example.dip.demodippizzamanager.stores.NYPizzaStore {
          # createPizza()
      }
    }
  }
  

  namespace com.example.dip.demodippizzamanager {
    namespace stores {
      abstract class com.example.dip.demodippizzamanager.stores.PizzaStore {
          + orderPizza()
          {abstract} # createPizza()
      }
    }
  }
  

  com.example.dip.demodippizzamanager.stores.ChicagoPizzaStore -up-|> com.example.dip.demodippizzamanager.stores.PizzaStore
  com.example.dip.demodippizzamanager.stores.NYPizzaStore -up-|> com.example.dip.demodippizzamanager.stores.PizzaStore


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
